# IRIO-Shortest-Paths

./: .gitignore  README.md  solution_description.md
DBConnector/: Dockerfile  connector.py  requirements.txt
cached_shortest_paths/: CMakeLists.txt  caching_interceptor.cc  caching_interceptor.hh  client.cc  client.hh  common.cmake  flask_app.py  main.cc  server.cc  shortestpaths.proto
graph/: README.md  create_tables.sql  csv_to_postgres.py  monaco-latest.osm.pbf  prepare_direct_connections.py  prepare_edges.py  prepare_nodes.py  prepare_optimal_connections.py  run_python.sh
grpc-dijkstra/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  common.cc  common.hh  dijkstra.proto  dijkstra_client.cc  dijkstra_common.hh  dijkstra_server.cc  dijkstra_worker.cc  main.cc  main_client.cc  main_server.cc  main_server.hh  shortestpaths.proto  worker.cc  worker.hh  worker_client.cc  worker_client.hh  worker_server.cc  worker_server.hh
kubernetes-yaml/: client.yaml  client2.yaml  client_flask.yaml  db-connector.yaml  main.yaml  worker.yaml
main/: CMakeLists.txt  Dockerfile  Makefile  client_test.cc  common.cc  common.hh  main.cc  main_server.cc  main_server.hh
redis-example/: redis.conf  redis_example  redis_example.cpp
sample/: Dockerfile  client_test.py  shortestpaths.proto
src/: dijkstra.cpp  dijkstra_playground.cpp
worker/: CMakeLists.txt  Dockerfile  Makefile  client_test.cc  common.cc  common.hh  shortestpaths.proto  worker.cc  worker.hh  worker_client.cc  worker_client.hh  worker_server.cc
